<resources>
    <string name="app_name">litepay_app</string>
    <string name="loading">Loading…</string>
    <string name="no_internet_connection">No internet connection!</string>
<string name="lbl_lodge_complaint">Lodge Complaint</string>
  <string name="msg_1_0gb_n270_30">1.0GB - N270/30 days</string>
  <string name="lbl_cable_sub">Cable Sub</string>
  <string name="lbl_buy_data">Buy Data</string>
  <string name="lbl_n">N</string>
  <string name="lbl_select_exam">Select Exam</string>
  <string name="lbl_logout">Logout</string>
  <string name="lbl_benin_electric">Benin Electric</string>
  <string name="lbl_phone_no">Phone No.</string>
  <string name="msg_confirm_passwor">Confirm password</string>
  <string name="lbl_1_900">1,900</string>
  <string name="lbl_about">About</string>
  <string name="lbl_lg_of_origin">LG of origin</string>
  <string name="msg_select_disco_co">Select Disco company</string>
  <string name="lbl_oops">Oops!</string>
  <string name="lbl_new_password">New password</string>
  <string name="lbl_airtel">Airtel</string>
  <string name="lbl_n7000_00">N7000.00</string>
  <string name="lbl_lodge_complaint2">Lodge complaint</string>
  <string name="lbl_old_pin">Old PIN</string>
  <string name="msg_transaction_dat">Transaction Date</string>
  <string name="msg_what_task_would">What task would you like to perform?</string>
  <string name="lbl_validate_meter">Validate meter</string>
  <string name="lbl_12_20_33">12: 20:33</string>
  <string name="msg_transaction_his">Transaction History</string>
  <string name="msg_you_have_not_re">You have not refered any user yet, your referals will appear here.</string>
  <string name="lbl_male">Male</string>
  <string name="msg_user_id_sporty">User ID (SportyBet phone no.)</string>
  <string name="lbl_n4_900">N4,900</string>
  <string name="msg_re_enter_new_pa">Re-enter New Password</string>
  <string name="msg_validate_cable">Validate Cable Number</string>
  <string name="lbl_1300">1300</string>
  <string name="lbl_n400">N400</string>
  <string name="lbl_smart_earner">Smart
Earner</string>
  <string name="lbl_username">Username</string>
  <string name="lbl_wallet_balance">Wallet Balance</string>
  <string name="lbl_search_provider">Search Provider</string>
  <string name="lbl_data_type">Data Type</string>
  <string name="msg_re_enter_new_pi">Re-enter New PIN</string>
  <string name="lbl_5_000">5,000</string>
  <string name="msg_5_0gb_n1350_3">5.0GB - N1350/30 days</string>
  <string name="msg_transaction_num">Transaction Number</string>
  <string name="lbl_select_amount">Select Amount</string>
  <string name="lbl_home_add">Home Add.</string>
  <string name="lbl_data">Data</string>
  <string name="msg_portharcourt_el">PortHarcourt Electric</string>
  <string name="lbl_efficiency">Efficiency</string>
  <string name="lbl_user_friendly">User Friendly</string>
  <string name="msg_you_ve_entered">You\u2019ve entered an incorrect email</string>
  <string name="lbl_airtel_airtime">AIRTEL
AIRTIME</string>
  <string name="lbl_select_package">Select Package</string>
  <string name="lbl_gender">Gender</string>
  <string name="msg_password_mismat">Password mismatched</string>
  <string name="lbl_n_0_0">N 0.0</string>
  <string name="lbl_2700_30_days">2700/30 days</string>
  <string name="lbl_002">00</string>
  <string name="msg_fund_wallet_atm">Fund wallet ATM Monnify</string>
  <string name="msg_we_are_100_sec">We are 100% Secure</string>
  <string name="lbl_ikeja_electric">Ikeja Electric</string>
  <string name="msg_invalid_meter_n">Invalid meter number</string>
  <string name="msg_re_enter_new">Re - enter New PIN</string>
  <string name="lbl_amount">Amount</string>
  <string name="msg_afcon_2023_grou">AFCON 2023/GROUP B</string>
  <string name="msg_send_us_a_messa">Send us a message</string>
  <string name="lbl_mtn_airtime">MTN
AIRTIME</string>
  <string name="lbl_glo">Glo</string>
  <string name="lbl_referals">Referals</string>
  <string name="lbl_810_30_days">810/30 days</string>
  <string name="msg_recipient_mobil">Recipient Mobile</string>
  <string name="msg_upgrade_to_affi3">Upgrade to Affilliate </string>
  <string name="msg_your_new_passwo">Your new password must be different from your old password</string>
  <string name="msg_upgrade_to_affi2">Upgrade to Affilliate N2,500</string>
  <string name="lbl_betting">Betting</string>
  <string name="lbl_password">Password</string>
  <string name="msg_refer_people_to">Refer people to LitePay.com to earn 5% of their first payment and N500 immediately the person upgrade his/her account to affiliate or topuser (Tap to copy)</string>
  <string name="msg_gotv_supa_mon2">GOtv Supa - Monthly - </string>
  <string name="lbl_15_000">   15,000</string>
  <string name="lbl_10200">10200</string>
  <string name="lbl_fingerprint">Fingerprint</string>
  <string name="lbl_select_network">Select Network</string>
  <string name="msg_fund_wallet_aut">Fund wallet Automated bank</string>
  <string name="msg_max_size_of_1">(Max size  of 100kb)</string>
  <string name="lbl_3_0gb">3.0GB - </string>
  <string name="lbl_buy_data_bundle">Buy Data Bundle</string>
  <string name="lbl_select_provider">Select Provider</string>
  <string name="lbl_gifting">Gifting</string>
  <string name="msg_account_passwor">Account Password</string>
  <string name="msg_please_enter_th">Please enter the 6 digit code sent to abigailnwadike@gmail.com</string>
  <string name="msg_gotv_supa_mon">GOtv Supa - Monthly - N7600</string>
  <string name="lbl_dear_nkky">Dear Nkky</string>
  <string name="msg_2_500_to_upgrad">2,500 to upgrade to Affilliate package </string>
  <string name="msg_you_are_about_t">You are about to purchase 1 piece of WAEC exam pin at N3500.00</string>
  <string name="lbl_use_pin_instead">Use PIN Instead</string>
  <string name="lbl_08069323241">08069323241</string>
  <string name="lbl_gotv">GOTV</string>
  <string name="lbl_message">Message:</string>
  <string name="lbl_270_30_days">270/30 days</string>
  <string name="lbl_2_0gb">2.0GB - </string>
  <string name="lbl_wallet_summary">Wallet summary</string>
  <string name="msg_upgrade_to_topu2">Upgrade to TopUser </string>
  <string name="lbl_gotv_jinja">GOtv Jinja - </string>
  <string name="lbl_signout">SignOut</string>
  <string name="lbl_female">Female</string>
  <string name="lbl_00_60">00:60</string>
  <string name="msg_nwadike_chinaza">Nwadike Chinaza Abigail</string>
  <string name="lbl_email2">Email:</string>
  <string name="lbl_balance">Balance</string>
  <string name="lbl_4_9">4,9</string>
  <string name="lbl_sportybet">SportyBet</string>
  <string name="lbl_change_password">Change Password</string>
  <string name="lbl_amount_to_pay">Amount to pay</string>
  <string name="msg_856709851267431">856709851267431876</string>
  <string name="lbl_setting">Setting</string>
  <string name="lbl_litepay2">LitePay</string>
  <string name="lbl_2_500">2,500</string>
  <string name="msg_gotv_jinja_n2">GOtv Jinja - N2700</string>
  <string name="lbl_contact_us">Contact Us</string>
  <string name="lbl_234_8142920154">+234 8142920154</string>
  <string name="lbl_get_started">Get Started</string>
  <string name="lbl_sign_up">Sign Up</string>
  <string name="lbl_use_fingerprint">Use Fingerprint</string>
  <string name="lbl_send">Send</string>
  <string name="lbl_upgrade">Upgrade</string>
  <string name="msg_2_0gb_n540_30">2.0GB - N540/30 days</string>
  <string name="msg_select_cable_pr">Select cable provider</string>
  <string name="lbl_new_password2">New Password</string>
  <string name="lbl_customer_no">Customer No.</string>
  <string name="lbl_quantity">Quantity</string>
  <string name="lbl_11_mins">11 mins</string>
  <string name="lbl_9_900">9,900</string>
  <string name="lbl_skip">Skip</string>
  <string name="msg_affilliate_webs">Affilliate Website</string>
  <string name="lbl_submit">Submit</string>
  <string name="lbl_nin_bvn">NIN/BVN</string>
  <string name="lbl_save">Save</string>
  <string name="msg_feb_12_12_20">Feb 12, 12: 20:33</string>
  <string name="lbl_send_message">Send Message</string>
  <string name="lbl_kaduna_electric">Kaduna Electric</string>
  <string name="msg_gotv_smallie_mo">GOtv smallie-Monthly - N1300</string>
  <string name="lbl_success">Success</string>
  <string name="lbl_surname">SurName</string>
  <string name="lbl_amount2">   Amount</string>
  <string name="lbl_referrals">Referrals</string>
  <string name="lbl_startimes">STARTIMES</string>
  <string name="lbl_7600">7600</string>
  <string name="msg_neco_result_che">NECO
Result
Checker</string>
  <string name="msg_gotv_max_n570">GOtv Max - N5700 </string>
  <string name="msg_confirm_transac">Confirm Transaction</string>
  <string name="lbl_change_pin">Change PIN</string>
  <string name="msg_navigate_effort">Navigate effortlessly!
 Our user-friendly interface makes topping up your mobile credit a simple and enjoyable experience, even for first-time users.</string>
  <string name="lbl_3950">3950</string>
  <string name="lbl_kyc">KYC</string>
  <string name="lbl_security">Security</string>
  <string name="lbl_share_receipt">Share Receipt</string>
  <string name="msg_enter_bonus_amo">Enter bonus amount</string>
  <string name="lbl_education_pin">Education PIN</string>
  <string name="lbl_08059715176">08059715176</string>
  <string name="lbl_mozambique">Mozambique</string>
  <string name="msg_kindly_note_tha3">Kindly note that you will be charged N5000 to upgrade to Affilliate package </string>
  <string name="msg_kindly_note_tha2">Kindly note that you will be charged </string>
  <string name="lbl_pay">Pay</string>
  <string name="lbl_ok">Ok</string>
  <string name="msg_enter_your_emai">Enter your email to get a password reset code</string>
  <string name="lbl_welcome_back">Welcome back
</string>
  <string name="msg_recharge_in_a_b">Recharge in a blink!
Ensures your mobile credit is topped up within seconds
Making every transaction a breeze</string>
  <string name="msg_litepay_referal">LitePay Referal Program</string>
  <string name="lbl_new_pin">New PIN</string>
  <string name="lbl_meter_no">Meter No.</string>
  <string name="lbl_dstv">DSTV</string>
  <string name="msg_what_sapp_link">(What\u2019sapp link)</string>
  <string name="lbl_settings">Settings</string>
  <string name="lbl_140_30_days">140/30 days</string>
  <string name="lbl_or">OR</string>
  <string name="lbl_n5000_00">N5000.00</string>
  <string name="lbl_1350_30_days">1350/30 days</string>
  <string name="lbl_set_pin">Set PIN</string>
  <string name="lbl_airtime_funding">Airtime Funding</string>
  <string name="lbl_500_00">500.00</string>
  <string name="lbl_share_and_sell">Share and Sell</string>
  <string name="lbl_meter_type">Meter Type</string>
  <string name="lbl_pricing">Pricing</string>
  <string name="lbl_select_plan">Select Plan</string>
  <string name="msg_no_10_calabar">No. 10 calabar street off Abia poly</string>
  <string name="msg_to_get_notifica">To get notifications, try performing transactions</string>
  <string name="lbl_9mobile">9Mobile</string>
  <string name="lbl_next">Next</string>
  <string name="msg_bypass_number_v">Bypass number validator for ported number</string>
  <string name="lbl_successful">Successful</string>
  <string name="msg_transaction_tim">Transaction Time</string>
  <string name="lbl_topuser">TopUser</string>
  <string name="msg_transaction_typ">Transaction Type</string>
  <string name="lbl_airtime">Airtime</string>
  <string name="lbl_08059941818">08059941818</string>
  <string name="lbl_n900">N900</string>
  <string name="lbl_n100">N100</string>
  <string name="lbl_12th_jan_2024">12th jan, 2024 </string>
  <string name="msg_transaction_det">Transaction Details</string>
  <string name="lbl_api_user">API User</string>
  <string name="lbl_n500_00">N500.00</string>
  <string name="lbl_payment_method">Payment Method</string>
  <string name="lbl_services">Services</string>
  <string name="lbl_mtn">MTN</string>
  <string name="lbl_affilliate">Affilliate</string>
</resources>