<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="listservicesRowModel" type="com.litepayapp.app.modules.withdrawbonusfive.data.model.ListservicesRowModel"/>
    </data>
    <LinearLayout android:id="@+id/linearRowservices"
        android:layout_height="wrap_content"
        android:layout_width="match_parent" android:orientation="horizontal">
        <TextView android:ellipsize="end" android:id="@+id/txtServices"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_12pxv"
            android:layout_marginTop="@dimen/_8pxv"
            android:layout_weight="0.22" android:layout_width="0dp"
            android:singleLine="true"
            android:text="@{listservicesRowModel.txtServices}"
            style="@style/txtPoppinssemibold14_1" tools:text="@string/lbl_services"/>
        <TextView android:id="@+id/txtSmartEarner"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_44pxh"
            android:layout_weight="0.16" android:layout_width="0dp"
            android:text="@{listservicesRowModel.txtSmartEarner}"
            style="@style/txtPoppinsmedium14_2" tools:text="@string/lbl_smart_earner"/>
        <TextView android:ellipsize="end"
            android:id="@+id/txtAffilliate"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_12pxv"
            android:layout_marginStart="@dimen/_44pxh"
            android:layout_marginTop="@dimen/_8pxv"
            android:layout_weight="0.21" android:layout_width="0dp"
            android:singleLine="true"
            android:text="@{listservicesRowModel.txtAffilliate}"
            style="@style/txtPoppinsmedium14_2" tools:text="@string/lbl_affilliate"/>
        <TextView android:ellipsize="end" android:id="@+id/txtTopUser"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_9pxv"
            android:layout_marginStart="@dimen/_44pxh"
            android:layout_marginTop="@dimen/_11pxv"
            android:layout_weight="0.21" android:layout_width="0dp"
            android:singleLine="true"
            android:text="@{listservicesRowModel.txtTopUser}"
            style="@style/txtPoppinsmedium14_2" tools:text="@string/lbl_topuser"/>
        <TextView android:ellipsize="end" android:id="@+id/txtAPIUser"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_11pxv"
            android:layout_marginStart="@dimen/_44pxh"
            android:layout_marginTop="@dimen/_9pxv"
            android:layout_weight="0.2" android:layout_width="0dp"
            android:singleLine="true"
            android:text="@{listservicesRowModel.txtAPIUser}"
            style="@style/txtPoppinsmedium14_2" tools:text="@string/lbl_api_user"/>
    </LinearLayout>
</layout>
