<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="transactionDetailsVM" type="com.litepayapp.app.modules.transactiondetails.data.viewmodel.TransactionDetailsVM"/>
    </data>
    <LinearLayout android:gravity="start"
        android:id="@+id/linearTransactiondet"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical" style="@style/groupStylewhite_A700">
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbarToolbar"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_22pxh"
            android:layout_marginStart="@dimen/_22pxh"
            android:layout_marginTop="@dimen/_23pxv"
            android:layout_width="match_parent" app:contentInsetStart="0dp">
            <LinearLayout android:gravity="start"
                android:id="@+id/linearRowarrowleft"
                android:layout_height="wrap_content"
                android:layout_width="match_parent" android:orientation="horizontal">
                <ImageView android:id="@+id/imageArrowleft"
                    android:layout_height="@dimen/_14pxh"
                    android:layout_marginBottom="@dimen/_2pxv"
                    android:layout_marginTop="@dimen/_4pxv"
                    android:layout_width="@dimen/_14pxh"
                    android:scaleType="fitXY"
                    android:src="@drawable/img_arrowleft_black_900"
                    tools:ignore="ContentDescription" tools:src="@drawable/img_arrowleft_black_900"/>
                <TextView android:ellipsize="end"
                    android:id="@+id/txtTransactionDet"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_76pxh"
                    android:layout_weight="0.91"
                    android:layout_width="0dp" android:singleLine="true"
                    android:text="@{transactionDetailsVM.transactionDetailsModel.txtTransactionDet}"
                    style="@style/txtPoppinsmedium14" tools:text="@string/msg_transaction_det"/>
            </LinearLayout>
        </androidx.appcompat.widget.Toolbar>
        <ImageView android:id="@+id/imageImageNineteen"
            android:layout_gravity="center_horizontal"
            android:layout_height="@dimen/_50pxh"
            android:layout_marginEnd="@dimen/_20pxh"
            android:layout_marginStart="@dimen/_20pxh"
            android:layout_marginTop="@dimen/_35pxv"
            android:layout_width="@dimen/_50pxh"
            android:scaleType="centerCrop" circular="@{true}"
            imageRes="@{@drawable/img_image19}"
            tools:ignore="ContentDescription" tools:src="@drawable/img_image19"/>
        <TextView android:ellipsize="end" android:id="@+id/txtMTN"
            android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_20pxh"
            android:layout_marginStart="@dimen/_20pxh"
            android:layout_marginTop="@dimen/_4pxv"
            android:layout_width="wrap_content"
            android:singleLine="true"
            android:text="@{transactionDetailsVM.transactionDetailsModel.txtMTN}"
            style="@style/txtPoppinsregular14" tools:text="@string/lbl_mtn"/>
        <TextView android:ellipsize="end" android:id="@+id/txtN50000"
            android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_20pxh"
            android:layout_marginStart="@dimen/_20pxh"
            android:layout_marginTop="@dimen/_2pxv"
            android:layout_width="wrap_content"
            android:singleLine="true"
            android:text="@{transactionDetailsVM.transactionDetailsModel.txtN50000}"
            style="@style/txtPoppinsregular18" tools:text="@string/lbl_n500_00"/>
        <TextView android:ellipsize="end"
            android:id="@+id/txtSuccessful"
            android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_20pxh"
            android:layout_marginStart="@dimen/_20pxh"
            android:layout_marginTop="@dimen/_1pxv"
            android:layout_width="wrap_content"
            android:singleLine="true"
            android:text="@{transactionDetailsVM.transactionDetailsModel.txtSuccessful}"
            style="@style/txtPoppinsmedium12_2" tools:text="@string/lbl_successful"/>
        <LinearLayout android:id="@+id/linearRowrecipientmobil"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_20pxh"
            android:layout_marginStart="@dimen/_20pxh"
            android:layout_marginTop="@dimen/_28pxv"
            android:layout_width="match_parent" android:orientation="horizontal">
            <TextView android:ellipsize="end"
                android:id="@+id/txtRecipientMobil"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_1pxv"
                android:layout_weight="0.57" android:layout_width="0dp"
                android:singleLine="true"
                android:text="@{transactionDetailsVM.transactionDetailsModel.txtRecipientMobil}"
                style="@style/txtPoppinsregular12_3" tools:text="@string/msg_recipient_mobil"/>
            <TextView android:ellipsize="end"
                android:id="@+id/txt08059941818"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_1pxv"
                android:layout_marginStart="@dimen/_145pxh"
                android:layout_weight="0.43" android:layout_width="0dp"
                android:singleLine="true"
                android:text="@{transactionDetailsVM.transactionDetailsModel.txt08059941818}"
                style="@style/txtPoppinsregular12" tools:text="@string/lbl_08059941818"/>
        </LinearLayout>
        <LinearLayout android:id="@+id/linearRowtransactiontyp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_20pxh"
            android:layout_marginStart="@dimen/_20pxh"
            android:layout_marginTop="@dimen/_22pxv"
            android:layout_width="match_parent" android:orientation="horizontal">
            <TextView android:ellipsize="end"
                android:id="@+id/txtTransactionTyp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_1pxv"
                android:layout_weight="0.71" android:layout_width="0dp"
                android:singleLine="true"
                android:text="@{transactionDetailsVM.transactionDetailsModel.txtTransactionTyp}"
                style="@style/txtPoppinsregular12_3" tools:text="@string/msg_transaction_typ"/>
            <TextView android:ellipsize="end"
                android:id="@+id/txtAirtime"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_1pxv"
                android:layout_marginStart="@dimen/_173pxh"
                android:layout_weight="0.29" android:layout_width="0dp"
                android:singleLine="true"
                android:text="@{transactionDetailsVM.transactionDetailsModel.txtAirtime}"
                style="@style/txtPoppinsregular12" tools:text="@string/lbl_airtime"/>
        </LinearLayout>
        <LinearLayout android:id="@+id/linearRowpaymentmethod"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_20pxh"
            android:layout_marginStart="@dimen/_20pxh"
            android:layout_marginTop="@dimen/_22pxv"
            android:layout_width="match_parent" android:orientation="horizontal">
            <TextView android:ellipsize="end"
                android:id="@+id/txtPaymentMethod"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_1pxv"
                android:layout_weight="0.68" android:layout_width="0dp"
                android:singleLine="true"
                android:text="@{transactionDetailsVM.transactionDetailsModel.txtPaymentMethod}"
                style="@style/txtPoppinsregular12_3" tools:text="@string/lbl_payment_method"/>
            <TextView android:ellipsize="end"
                android:id="@+id/txtBalance"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_1pxv"
                android:layout_marginStart="@dimen/_168pxh"
                android:layout_weight="0.32" android:layout_width="0dp"
                android:singleLine="true"
                android:text="@{transactionDetailsVM.transactionDetailsModel.txtBalance}"
                style="@style/txtPoppinsregular12" tools:text="@string/lbl_balance"/>
        </LinearLayout>
        <LinearLayout android:id="@+id/linearRowtransactionnum"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_20pxh"
            android:layout_marginStart="@dimen/_20pxh"
            android:layout_marginTop="@dimen/_22pxv"
            android:layout_width="match_parent" android:orientation="horizontal">
            <TextView android:ellipsize="end"
                android:id="@+id/txtTransactionNum"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_1pxv"
                android:layout_weight="0.47" android:layout_width="0dp"
                android:singleLine="true"
                android:text="@{transactionDetailsVM.transactionDetailsModel.txtTransactionNum}"
                style="@style/txtPoppinsregular12_3" tools:text="@string/msg_transaction_num"/>
            <LinearLayout android:id="@+id/linearRow856709851267431"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_1pxv"
                android:layout_marginEnd="@dimen/_2pxh"
                android:layout_marginStart="@dimen/_56pxh"
                android:layout_marginTop="@dimen/_1pxv"
                android:layout_weight="0.53" android:layout_width="0dp" android:orientation="horizontal">
                <TextView android:ellipsize="end"
                    android:id="@+id/txt856709851267431"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.92"
                    android:layout_width="0dp" android:singleLine="true"
                    android:text="@{transactionDetailsVM.transactionDetailsModel.txt856709851267431}"
                    style="@style/txtPoppinsregular12" tools:text="@string/msg_856709851267431"/>
                <ImageView android:id="@+id/imageThumbsup"
                    android:layout_height="@dimen/_12pxh"
                    android:layout_marginBottom="@dimen/_2pxv"
                    android:layout_marginStart="@dimen/_2pxh"
                    android:layout_marginTop="@dimen/_3pxv"
                    android:layout_width="@dimen/_10pxh"
                    android:scaleType="fitXY"
                    android:src="@drawable/img_thumbsup_purple_500"
                    tools:ignore="ContentDescription" tools:src="@drawable/img_thumbsup_purple_500"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout android:id="@+id/linearRowtransactiondat"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_20pxh"
            android:layout_marginStart="@dimen/_20pxh"
            android:layout_marginTop="@dimen/_23pxv"
            android:layout_width="match_parent" android:orientation="horizontal">
            <TextView android:ellipsize="end"
                android:id="@+id/txtTransactionDat"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_1pxv"
                android:layout_weight="0.56" android:layout_width="0dp"
                android:singleLine="true"
                android:text="@{transactionDetailsVM.transactionDetailsModel.txtTransactionDat}"
                style="@style/txtPoppinsregular12_3" tools:text="@string/msg_transaction_dat"/>
            <TextView android:ellipsize="end"
                android:id="@+id/txtLanguage"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_137pxh"
                android:layout_marginTop="@dimen/_1pxv"
                android:layout_weight="0.44" android:layout_width="0dp"
                android:singleLine="true"
                android:text="@{transactionDetailsVM.transactionDetailsModel.txtLanguage}"
                style="@style/txtPoppinsregular12" tools:text="@string/lbl_12th_jan_2024"/>
        </LinearLayout>
        <LinearLayout android:id="@+id/linearRowtransactiontim"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_20pxh"
            android:layout_marginStart="@dimen/_20pxh"
            android:layout_marginTop="@dimen/_22pxv"
            android:layout_width="match_parent" android:orientation="horizontal">
            <TextView android:ellipsize="end"
                android:id="@+id/txtTransactionTim"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_1pxv"
                android:layout_weight="0.68" android:layout_width="0dp"
                android:singleLine="true"
                android:text="@{transactionDetailsVM.transactionDetailsModel.txtTransactionTim}"
                style="@style/txtPoppinsregular12_3" tools:text="@string/msg_transaction_tim"/>
            <TextView android:ellipsize="end"
                android:id="@+id/txt122033"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_168pxh"
                android:layout_marginTop="@dimen/_1pxv"
                android:layout_weight="0.32" android:layout_width="0dp"
                android:singleLine="true"
                android:text="@{transactionDetailsVM.transactionDetailsModel.txt122033}"
                style="@style/txtPoppinsregular12" tools:text="@string/lbl_12_20_33"/>
        </LinearLayout>
        <androidx.appcompat.widget.AppCompatButton
            android:ellipsize="end" android:gravity="center"
            android:id="@+id/btnShareReceipt"
            android:layout_height="@dimen/_38pxv"
            android:layout_marginBottom="@dimen/_20pxv"
            android:layout_marginEnd="@dimen/_72pxh"
            android:layout_marginStart="@dimen/_72pxh"
            android:layout_marginTop="@dimen/_77pxv"
            android:layout_width="@dimen/_164pxh"
            android:paddingBottom="@dimen/_10pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_30pxh"
            android:paddingTop="@dimen/_10pxv" android:singleLine="true"
            android:text="@string/lbl_share_receipt"
            android:textAllCaps="false" style="@style/btnSolidRounded_3" tools:text="@string/lbl_share_receipt"/>
    </LinearLayout>
</layout>
